[tool.poetry]
name = "carbon"
version = "0.1.0"
description = "Asynchronous Lambda Functions for AWS"
authors = ["Anderson Carlos Woss <anderson@woss.eng.br>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
